crates/compiler/src/tests/e2e/good/0249_hashmap_lookup_match/main.gom
fn main() {
    let m: HashMap[uint8, string] = HashMap::new();
    m.set(1, "one");
    m.set(2, "two");
    m.set(3, "three");
    match m.get(2) {
        Option::Some(v) => println(v),
        Option::None => println("not found"),
    };
}
