crates/compiler/src/tests/e2e/bad/0005_hashmap_key_no_hash_eq/main.gom
struct Config {
  timeout: int32,
  retries: int32,
}

fn main() -> unit {
  let m = HashMap::new();
  m.set(Config { timeout: 30, retries: 3 }, "production");
  let result = m.get(Config { timeout: 30, retries: 3 });
  match result {
    Option::Some(v) => println(v),
    Option::None => println("not found"),
  }
}
